--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-red-contrib-hsync",
-  "version": "0.1.0",
+  "name": "@hsync/node-red-hsync",
+  "version": "0.2.0",
   "description": "put node-red online securely with a hsync server",
   "main": "index.js",
   "scripts": {
