--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hsync/node-red-hsync",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "put node-red online securely with a hsync server",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,9 @@
     "nodes": {
       "hsync": "hsync.js"
     }
+  },
+  "engines": {
+    "node": ">=16.0.0"
   },
   "author": "Luis Montes",
   "license": "ISC",
